fixing social spacing on mobile

--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -72,7 +72,7 @@
   @media only screen and (max-width: 991px) {
     min-width: 120px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     margin-bottom: 24px;
   }
 }
